<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="memorytrainer.jwise200.com.tictactoe.FinalMenu"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wins"
        android:id="@+id/victoryDeclarationText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/victoryDeclaration"
        android:layout_above="@+id/victoryDeclarationText"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blank"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/playAgain"
        android:id="@+id/playAgainButton"
        android:layout_below="@+id/victoryDeclarationText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu"
        android:id="@+id/mainMenuButton"
        android:layout_below="@+id/playAgainButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />
</RelativeLayout>
